--- a/callme.html
+++ b/callme.html
@@ -1,5 +1,6 @@
 <html>
-<head>Click to call test</head>
+<head>
+  <title>Click to call test</title></head>
 <body>
   <h1><a href="tel:00447724755076">Call me</a></h1>
 </body>
