--- a/callme.html
+++ b/callme.html
@@ -1,7 +1,9 @@
 <html>
 <head>
-  <title>Click to call test</title></head>
-<body>
+  <title>Click to call test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body style="margin:auto;font-family:sans-serif;">
   <h1><a href="tel:00447724755076">Call me</a></h1>
 </body>
 </html>
