--- a/callme.html
+++ b/callme.html
@@ -3,7 +3,9 @@
   <title>Click to call test</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="margin:auto;font-family:sans-serif;">
+<body style="height:100%;">
+  <div style="margin:auto;font-family:sans-serif;min-height:100%;display:table-cell;vertical-align:middle;">
   <h1><a href="tel:00447724755076">Call me</a></h1>
+</div>
 </body>
 </html>
