--- a/callme.html
+++ b/callme.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="height:100%;">
-  <div style="margin:auto;font-family:sans-serif;min-height:100%;display:table-cell;vertical-align:middle;">
+  <div style="margin:auto;font-family:sans-serif;min-height:100%;display:table-cell;vertical-align:middle;text-align: center;display:block;">
   <h1><a href="tel:00447724755076">Call me</a></h1>
 </div>
 </body>
